[gd_scene load_steps=15 format=3 uid="uid://b6au5k15i675i"]

[ext_resource type="Script" path="res://scenes/script/snail.gd" id="1_0qqlm"]
[ext_resource type="Texture2D" uid="uid://ca7o8v82u0dcn" path="res://Assets/Enemies/Snail/walk-Sheet.png" id="1_81i0e"]

[sub_resource type="AtlasTexture" id="AtlasTexture_861ty"]
atlas = ExtResource("1_81i0e")
region = Rect2(0, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8cxk"]
atlas = ExtResource("1_81i0e")
region = Rect2(48, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjcy8"]
atlas = ExtResource("1_81i0e")
region = Rect2(96, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mglbr"]
atlas = ExtResource("1_81i0e")
region = Rect2(144, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ydfkv"]
atlas = ExtResource("1_81i0e")
region = Rect2(192, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4cby6"]
atlas = ExtResource("1_81i0e")
region = Rect2(240, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvtwp"]
atlas = ExtResource("1_81i0e")
region = Rect2(288, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qe8sa"]
atlas = ExtResource("1_81i0e")
region = Rect2(336, 0, 48, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_rgs6g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_861ty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8cxk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vjcy8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mglbr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ydfkv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4cby6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvtwp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qe8sa")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0fmyl"]
size = Vector2(31, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7x7bp"]
size = Vector2(35, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rm6o1"]
size = Vector2(27, 1.5)

[node name="Snail_enemy" type="CharacterBody2D"]
script = ExtResource("1_0qqlm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(2.5, 5)
scale = Vector2(1.10417, 1.3125)
sprite_frames = SubResource("SpriteFrames_rgs6g")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.5, 13)
shape = SubResource("RectangleShape2D_0fmyl")

[node name="Hitbox" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(2.5, 13.5)
shape = SubResource("RectangleShape2D_7x7bp")
debug_color = Color(0.997466, 0, 0.165329, 0.42)

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(2, 10)
target_position = Vector2(28, 19)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(2, 10)
target_position = Vector2(-28, 18)

[node name="StompSnail" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompSnail"]
position = Vector2(2.5, -1.25)
shape = SubResource("RectangleShape2D_rm6o1")
debug_color = Color(0, 0.648635, 0.174143, 0.42)

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_entered" from="StompSnail" to="." method="_on_stomp_snail_body_entered"]
